<resources>
    <string name="app_name">SmartBulb</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_inter">即刻登录</string>
    <string name="text_register">注册</string>
    <string name="register_username">用户名:</string>
    <string name="register_pwd">密码:</string>
    <string name="register_pwd_confirm">确认密码:</string>
    <string name="register_phone_num">手机号:</string>
    <string name="register_sucess">注册成功</string>
    <string name="reset_pwd_title">重置密码</string>
    <string name="reset_new_pwd">新密码</string>
    <string name="reset_input_again">再次输入</string>
    <string name="btn_sure">确定</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="forget_phone_num">注册手机号</string>
    <string name="forget_next_setp">下一步</string>
    <string name="login_keep_pwd">记住密码</string>
    <string name="login_auto">自动登录</string>
    <string name="login_summit">登录</string>
    <string name="login_create_account"><u>创建新账号</u></string>
    <string name="login_forget_pwd"><u>忘记密码</u></string>
    <string name="bulb_list">灯列表</string>
    <string name="bulb_add">添加灯</string>


</resources>
