<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <com.mod.ui.CircleImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_del"
            android:layout_marginBottom="10dp"
            app:border_color="@color/accent_material_light"
            app:border_width="2dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/title_register_item"
                android:text="@string/register_username"/>

            <EditText
                android:id="@+id/register_user_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                style="@style/text_register_item"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/title_register_item"
                android:text="@string/register_pwd"/>

            <EditText
                android:id="@+id/register_pwd_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                style="@style/text_register_item"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/title_register_item"
                android:text="@string/register_pwd_confirm"/>

            <EditText
                android:id="@+id/register_pwd_confirm_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                style="@style/text_register_item"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/title_register_item"
                android:text="@string/register_phone_num"/>

            <EditText
                android:id="@+id/register_phone_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                style="@style/text_register_item"
                android:inputType="phone"/>
        </LinearLayout>
        
        <Button
            android:id="@+id/btn_register_summit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_item_height"
            android:text="@string/text_register"/>

    </LinearLayout>

</LinearLayout>
