<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="@style/title_register_item"
                android:text="@string/reset_new_pwd"/>

            <EditText
                android:id="@+id/reset_new_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:maxLines="1"
                style="@style/text_register_item"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/title_register_item"
                android:text="@string/reset_input_again"/>

            <EditText
                android:id="@+id/reset_pwd_input_again"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:maxLines="1"
                style="@style/text_register_item"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset_summit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_item_height"
            android:layout_marginTop="60dp"
            android:text="@string/btn_sure"/>

    </LinearLayout>


</RelativeLayout>
